project(Engine)

include_directories("Core/")
include_directories("Devices/")
include_directories("Modules/")
include_directories("ThirdParty/")
include_directories("ThirdParty/EASTL/include/")
include_directories("ThirdParty/EABase/include/Common/")
include_directories("ThirdParty/FreeType/include")
add_Library(Engine "")

add_subdirectory(Core)
add_subdirectory(Devices)
add_subdirectory(Modules)
add_subdirectory(ThirdParty/Imgui)
add_subdirectory(ThirdParty/EASTL)
add_subdirectory(ThirdParty/EABase)
add_subdirectory(ThirdParty/FreeType)

GroupSources(${CMAKE_CURRENT_SOURCE_DIR})